Removed deprecated class JSONWrapper